server alt yapısı eklendi ve session eklendi

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "game",
     "oyun"
   ],
-  "author": "Avare Kodcu <abdurrahmaneker58@gmail.com>"
+  "author": "Avare Kodcu <abdurrahmaneker58@gmail.com>",
+  "devDependencies": {
+    "express": "^4.16.2",
+    "express-session": "^1.15.6"
+  }
 }
