--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "author": "Avare Kodcu <abdurrahmaneker58@gmail.com>",
   "devDependencies": {
+    "connect-redis": "^3.3.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6"
   }
