--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   ],
   "author": "Avare Kodcu <abdurrahmaneker58@gmail.com>",
   "dependencies": {
-    "sqlmaster": "^1.1.3",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.3.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "pg": "^7.4.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "socket.io": "^2.0.4",
+    "sqlmaster": "^1.1.3"
   }
 }
