--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-redis": "^3.3.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.2",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
