--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "connect-redis": "^3.3.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "express-socket.io-session": "^1.3.2",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
-    "sqlmaster": "^1.1.3"
+    "sqlmaster": "^1.1.4",
+    "wildemitter": "^1.2.0"
   }
 }
