--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
